# Othello-rs

./: Cargo.toml
old/: enums.rs
src/: main.rs
src/engine/: board.rs  mod.rs
src/engine/AI/: AI.rs  heuristics.rs  mod.rs  tree.rs
src/gui/: board.rs  info.rs  mod.rs  tile.rs
src/support/: mod.rs
src/theme/: mod.rs
src/tui/: mod.rs
